# pivalve-analytic

./: config_analytic.yaml  main.py  new_training_data_115964.csv  new_training_data_116250.csv  new_training_data_117084.csv  new_training_data_117086.csv  new_training_data_117912.csv  pyproject.toml
config/: __init__.py  config.cfg  config.yaml  default.yaml  development.yaml
constants/: authenticator.py
data_loaders/: clickhouse.py  clickhouse_dataloader.py  high_res_dataitem.py
model/: load_model.py  model_training.py  pivalve-analytic-1.pt  pivalve-analytic-2.pt  pivalve-analytic-3.pt  pivalve-analytic-4.pt  pivalve-analytic-5.pt  pivalve-analytic-6.pt  pivalve-analytic-7.pt  pivalve-analytic.pt  test_data.csv
