[tool.poetry]
name = "pivalve-analytic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pivalve_analytic"}]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
numpy = "1.23"
pandas = ">=1.4.2,<1.5.0"
torch = "^2.1.0"
plotly = "^5.18.0"
pydantic = "1.9.0"
rms-commons = "0.1.3"
dask = {version = "2022.7.1", extras = ["complete"]}
flask = ">=2.1.1,<2.2.0"
dash = ">=2.3.1,<2.4.0"
dash-mantine-components = "0.12.1"
dash-bootstrap-components = "1.1.0"
werkzeug = "2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "myplant_nexus"
url = "https://nexus-dev.myplant.io/repository/myplantpy/simple"